--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "graphqltest",
+  "name": "graphql-server",
   "version": "1.0.0",
-  "description": "graphiql portal for user management",
+  "description": "GraphQL server with Mongoose (MongoDB) and Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --harmony src/server/index.js",
+    "client": "",
+    "test": "NODE_ENV=test mocha --compilers js:babel/register --require co-mocha $(find src -name \"*.spec.js\")",
+    "seed": "node --harmony ./seed"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iswanj/graphqltest.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "RisingStack",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iswanj/graphqltest/issues"
-  },
-  "homepage": "https://github.com/iswanj/graphqltest#readme",
   "dependencies": {
-    "babel": "^6.3.26",
-    "babel-preset-es2015": "^6.3.13",
-    "co": "^4.6.0",
-    "co-body": "^4.0.0",
+    "babel": "^5.6.14",
+    "babel-core": "^5.6.15",
+    "co": "^4.5.4",
+    "co-body": "^2.0.0",
     "debug": "^2.2.0",
-    "graphql": "^0.4.14",
-    "koa": "^1.1.2",
+    "graphql": "^0.2.4",
+    "kcors": "^1.0.1",
+    "koa": "^0.21.0",
     "koa-qs": "^2.0.0",
-    "koa-router": "^5.3.0",
-    "mongoose": "^4.3.4",
-    "superagent": "^1.6.1"
+    "koa-router": "^5.1.1",
+    "mongoose": "^4.0.6",
+    "superagent": "^1.2.0"
   }
 }
